--- a/css/style.css
+++ b/css/style.css
@@ -338,133 +338,46 @@ a.hide-a:hover{
 	text-align: center;
 }
 
-.member-sebastian {
-	background-image: url("../images/members/bas.jpg");
+.member-alexh {
+	background-image: url("../images/members/alexh.jpg");
 }
 
-.member-sebastian:hover {
-	background-image: url("../images/members/bas_funny.jpg");
+.member-irith {
+	background-image: url("../images/members/irith.jpg");
 }
 
-.member-john {
-	background-image: url("../images/members/john.jpg");
+.member-ishan{
+	background-image: url("../images/members/ishan.jpg");
 }
 
-.member-john:hover {
-	background-image: url("../images/members/john_funny.jpg");
+.member-jonathan {
+	background-image: url("../images/members/jonathan.jpg");
 }
 
-.member-kyle {
-	background-image: url("../images/members/kyle.jpg");
+.member-lauren {
+	background-image: url("../images/members/lauren.jpg");
 }
 
-.member-kyle:hover {
-	background-image: url("../images/members/kyle_funny.jpg");
+.member-nickm {
+	background-image: url("../images/members/nickm.jpg");
 }
 
-.member-seth {
-	background-image: url("../images/members/seth.jpg");
+.member-nickc {
+	background-image: url("../images/members/nickc.jpg");
 }
 
-.member-seth:hover {
-	background-image: url("../images/members/seth_funny.jpg");
+.member-steve {
+	background-image: url("../images/members/steve.jpg");
 }
 
-.member-ryan {
-	background-image: url("../images/members/ryan.jpg");
-}
-
-.member-ryan:hover {
-	background-image: url("../images/members/ryan_funny.jpg");
-}
-
-.member-ben {
-	background-image: url("../images/members/ben.jpg");
-}
-
-.member-ben:hover {
-	background-image: url("../images/members/ben_funny.jpg");
-}
-
-.member-alex {
-	background-image: url("../images/members/alex.jpg");
-}
-
-.member-alex:hover {
-	background-image: url("../images/members/alex_funny.jpg");
-}
-
-.member-greg {
-	background-image: url("../images/members/greg.jpg");
-}
-
-.member-greg:hover {
-	background-image: url("../images/members/greg_funny.jpg");
-}
-
-.member-johnny {
-	background-image: url("../images/members/johnny.jpg");
-}
-
-.member-johnny:hover {
-	background-image: url("../images/members/johnny_funny.jpg");
+.member-taylor {
+	background-image: url("../images/members/taylor.jpg");
 }
 
 .member-tony {
 	background-image: url("../images/members/tony.jpg");
 }
 
-.member-tony:hover {
-	background-image: url("../images/members/tony_funny.jpg");
-}
-
-.member-ethan {
-	background-image: url("../images/members/ethan.jpg");
-}
-
-.member-ethan:hover {
-	background-image: url("../images/members/ethan_funny.jpg");
-}
-
-.member-genevieve {
-	background-image: url("../images/members/genevieve.jpg");
-}
-
-.member-genevieve:hover {
-	background-image: url("../images/members/genevieve_funny.jpg");
-}
-
-.member-ishan {
-	background-image: url("../images/members/ishan.jpg");
-}
-
-.member-ishan:hover {
-	background-image: url("../images/members/ishan_funny.jpg");
-}
-
-.member-emma {
-	background-image: url("../images/members/emma.jpg");
-}
-
-.member-emma:hover {
-	background-image: url("../images/members/emma_funny.jpg");
-}
-
-.member-sean {
-	background-image: url("../images/members/sean.jpg");
-}
-
-.member-sean:hover {
-	background-image: url("../images/members/sean_funny.jpg");
-}
-
-.member-ramy {
-	background-image: url("../images/members/ramy.jpg");
-}
-
-.member-ramy:hover {
-	background-image: url("../images/members/ramy_funny.jpg");
-}
 
 .footer {
 	background-color: rgb(34, 34, 34);
